Resolved hero text too large issue

--- a/_sass/_hero.scss
+++ b/_sass/_hero.scss
@@ -66,6 +66,6 @@
     }
 
     .hero-heading {
-        font-size: 6rem;
+        font-size: 5rem;
     }
 }
